--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <h1>User Management System</h1>
-<div class="main">
-    <div class="users">
-        <app-users (updateUser) = "updateUser($event)"></app-users>
-    </div>
-    <div class="userDetail" *ngIf="userSelected">
-        <app-user-detail [user]="userSelected"></app-user-detail> 
+<a href="#" (click)="newUser()">New User</a>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-8">
+            <app-users (updateUser)="updateUser($event)"></app-users>
+        </div>
+        <div class="col-4" *ngIf="showForm">
+            <app-user-detail [user]="userSelected"></app-user-detail>
+        </div>
     </div>
 </div>
