--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,8 @@
-<h1>User Management System</h1>
-<a href="#" (click)="newUser()">New User</a>
+<app-nav (onNewUser)="newUser()"></app-nav>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-8">
-            <app-users (updateUser)="updateUser($event)"></app-users>
-        </div>
-        <div class="col-4" *ngIf="showForm">
-            <app-user-detail [user]="userSelected"></app-user-detail>
+        <div class="col-12">
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
