--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -2,34 +2,34 @@
     <input type="hidden" name="id" [(ngModel)]="user.id">
     <div class="form-group">
         <label for="firstname">Firstname:</label>
-        <input [(ngModel)]="user.name" name="firstname" id="firstname">
+        <input  class="form-control" [(ngModel)]="user.name" name="firstname" id="firstname">
     </div>
     <div class="form-group">
         <label for="lastname">Lastname:</label>
-        <input [(ngModel)]="user.lastname" name="lastname" id="lastname">
+        <input class="form-control" [(ngModel)]="user.lastname" name="lastname" id="lastname">
     </div>
     <div class="form-group">
         <label for="email">Email:</label>
-        <input [(ngModel)]="user.email" type="email" name="email" id="email">
+        <input class="form-control" [(ngModel)]="user.email" type="email" name="email" id="email">
     </div>
     <div class="form-group">
         <label for="fiscalCode">Fiscal code:</label>
-        <input [(ngModel)]="user.fiscalcode" name="fiscalCode" id="fiscalCode">
+        <input class="form-control" [(ngModel)]="user.fiscalcode" name="fiscalCode" id="fiscalCode">
     </div>
     <div class="form-group">
         <label for="province">Province:</label>
-        <input [(ngModel)]="user.province" name="province" id="province">
+        <input class="form-control" [(ngModel)]="user.province" name="province" id="province">
     </div>
     <div class="form-group">
         <label for="phone">Phone:</label>
-        <input [(ngModel)]="user.phone" name="phone" id="phone">
+        <input class="form-control" [(ngModel)]="user.phone" name="phone" id="phone">
     </div>
     <div class="form-group">
         <label for="age">Age:</label>
-        <input [(ngModel)]="user.age" type="number" name="age" id="age">
+        <input class="form-control" [(ngModel)]="user.age" type="number" name="age" id="age">
     </div>
     <div class="form-group form-footer">
-        <button class="btn-reset" (click)="resetForm(f.form)"> RESET</button>
-        <button class="btn-save" (click)="saveUser()"> SAVE</button>
+        <button class="btn btn-outline-secondary" (click)="resetForm(f.form)"> RESET</button>
+        <button class="btn btn-success" (click)="saveUser()"> SAVE</button>
     </div>
 </form>
