--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,16 +1,20 @@
-<table >
-    <caption>{{title}}</caption>
-    <tr>
-        <th>Name</th>
-        <th>Last name</th>
-        <th>Fiscal code</th>
-        <th>Email</th>
-        <th>Phone</th>
-        <th>Province</th>
-        <th>Age</th>
-        <th>Actions</th>
-    </tr>
-    <!--vedere nel componente "app-user.ts" la mappatura sotto la proprietà "selector" -->
-    <tr app-user *ngFor="let user of users" [user-data]="user" (onDeleteUser)="onDeleteUser($event)" (onSelectUser)="onSelectUser($event)">
-    </tr>
+<table class="table table-striped table-dark table-sm">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Last name</th>
+            <th>Fiscal code</th>
+            <th>Email</th>
+            <th>Phone</th>
+            <th>Province</th>
+            <th>Age</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!--vedere nel componente "app-user.ts" la mappatura sotto la proprietà "selector" -->
+        <tr app-user *ngFor="let user of users" [user-data]="user" (onDeleteUser)="onDeleteUser($event)"
+            (onSelectUser)="onSelectUser($event)">
+        </tr>
+    </tbody>
 </table>
