--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-nav (onNewUser)="newUser()"></app-nav>
+<h2>Manage Users</h2>
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
