--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -7,12 +7,16 @@
 <td>{{user.age}}</td>
 <td>
     <div class="row">
-        <div class="col-sm-6">
-            <button class="btn btn-primary btn-sm" (click)="updateUser()"><fa-icon [icon]="faPencil"></fa-icon>
-            </button>
+        <div class="col-sm">
+            <a class="btn btn-primary btn-sm w-50" routerLink="/users/{{user?.id}}/edit"><fa-icon [icon]="faPencil"></fa-icon>
+            </a>
         </div>
-        <div class="col-sm-6">
-            <button class="btn btn-danger btn-sm" (click)="deleteUser()"><fa-icon [icon]="faTrash"></fa-icon></button>
+        <div class="col-sm">
+            <a class="btn btn-primary btn-sm w-50" routerLink="/users/{{user?.id}}"><fa-icon [icon]="faInfo"></fa-icon>
+            </a>
+        </div>
+        <div class="col-sm">
+            <button class="btn btn-danger btn-sm w-50" (click)="deleteUser()"><fa-icon [icon]="faTrash"></fa-icon></button>
         </div>
 
     </div>
