aggiunto json server

--- a/src/app/user-data/user-data.component.html
+++ b/src/app/user-data/user-data.component.html
@@ -59,6 +59,14 @@
         </tr>
 
     </tbody>
+    <tfoot>
+        <tr>
+            <td colspan="2" class="text-center">
+                <a class="btn btn-primary btn-lg" routerLink="/users">BACK TO USERS
+                </a>
+            </td>
+        </tr>
+    </tfoot>
 </table>
 <div *ngIf="!user">
     <h2>No user found!</h2>
